# mytree

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: CLI.md
src/: lib.rs  main.rs
