[package]
name = "rtree"
version = "0.1.0"
edition = "2024"
authors = ["Alan Matthew"]
default-run = "rtree"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
colored = "2"
tempfile = "3"
chrono = "*"
flate2 = { version = "1.1.1", features = ["rust_backend"] }
clap-markdown = "0.1.5"

