[package]
name = "rtree"
version = "0.1.0"
edition = "2024"
authors = ["Alan Matthew"]
description = "A fast CLI tool to visualize directory structures with filtering and formatting"
readme = "README.md"
repository = "https://github.com/yokurang/rtree"
homepage = "https://github.com/yokurang/rtree"
documentation = "https://docs.rs/rtree"
license = "MIT"
keywords = ["tree", "cli", "filesystem"]
categories = ["command-line-utilities"]
default-run = "rtree"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
colored = "2"
tempfile = "3"
chrono = "*"
flate2 = { version = "1.1.1", features = ["rust_backend"] }
clap-markdown = "0.1.5"
regex = "1.11.1"

