[package]
name = "mytree"
version = "0.1.4"
edition = "2021"
authors = ["Alan Matthew"]
description = "A fast CLI tool to visualize directory structures with filtering and formatting"
readme = "README.md"
repository = "https://github.com/yokurang/mytree"
homepage = "https://github.com/yokurang/mytree"
documentation = "https://docs.rs/mytree"
license = "MIT"
keywords = ["tree", "cli", "filesystem"]
categories = ["command-line-utilities"]
default-run = "mytree"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
colored = "2"
tempfile = "3"
chrono = "0.4"
flate2 = { version = "1.1.1", features = ["rust_backend"] }
clap-markdown = "0.1.5"
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
